force-app/main/default/objects/TipoAcessorios__c/TipoAcessorios__c.object-meta.xml
<CustomObject>
    <label>Tipos de Acessórios</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Tipo de Acessório</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tipos de Acessórios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>