force-app/main/default/objects/TipoAcessorios__c/fields/AcessorioPadrao__c.field-meta.xml
<CustomField>
    <fullName>AcessorioPadrao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acessório padrão</label>
    <type>Checkbox</type>
</CustomField>