force-app/main/default/objects/TipoAcessorios__c/fields/ComboAcessorios__c.field-meta.xml
<CustomField>
    <fullName>ComboAcessorios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combo de Acessorios</label>
    <referenceTo>ComboAcessorio__c</referenceTo>
    <relationshipLabel>Tipos de Acessórios</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>