force-app/main/default/objects/TipoAcessorios__c/fields/ComboCheck__c.field-meta.xml
<CustomField>
    <fullName>ComboCheck__c</fullName>
    <formula>NOT(ISBLANK(ComboAcessorios__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combo?</label>
    <type>Checkbox</type>
</CustomField>