force-app/main/default/objects/TipoAcessorios__c/fields/GrupoAcessorio__c.field-meta.xml
<CustomField>
    <fullName>GrupoAcessorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Acessórios</label>
    <referenceTo>GrupoAcessorios__c</referenceTo>
    <relationshipLabel>Tipos de Acessórios</relationshipLabel>
    <relationshipName>TipoAcessorios</relationshipName>
    <type>Lookup</type>
</CustomField>