force-app/main/default/objects/TipoAcessorios__c/fields/QuantidadeSugerida__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeSugerida__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantidade Sugerida</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>