force-app/main/default/objects/TipoAcessorios__c/recordTypes/Acessorio.recordType-meta.xml
<RecordType>
    <fullName>Acessorio</fullName>
    <active>true</active>
    <label>Acessório</label>
</RecordType>