force-app/main/default/objects/TipoAcessorios__c/recordTypes/ProdutoCombo.recordType-meta.xml
<RecordType>
    <fullName>ProdutoCombo</fullName>
    <active>true</active>
    <label>Produto do Combo</label>
</RecordType>